# report_converter

./: .gitignore  Makefile  README  logger.py  main.py  pyproject.toml
app/bots/telegram/: handlers.py
app/config/: settings.py
app/core/: exceptions.py
app/core/converters/: xlsx_to_csv.py
app/core/services/: report_generator.py  report_reader.py  report_writer.py  user_services.py
app/domain/entities/: sell_report.py
app/domain/value_objects/: my_collection.py
app/utils/: parser.py
tests/bots/telegram/: conftest.py  test_handlers.py
tests/core/converters/: conftest.py  test_xlsx_to_csv.py
tests/core/services/: conftest.py  test_report_generator.py  test_report_reader.py  test_report_writer.py  test_user_services.py
tests/utils/: test_parsers.py
