[tool.poetry]
name = "report_converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "24.1.0"
aiogram = "3.15.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
attrs = "24.2.0"
build = "1.2.2.post1"
cachecontrol = "0.14.3"
certifi = "2024.8.30"
charset-normalizer = "3.4.2"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.22.8"
et-xmlfile = "2.0.0"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
frozenlist = "1.5.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.2.1"
keyring = "25.6.0"
magic-filter = "1.0.12"
more-itertools = "10.7.0"
msgpack = "1.1.1"
multidict = "6.1.0"
openpyxl = "3.1.5"
packaging = "25.0"
pbs-installer = "2025.7.2"
pkginfo = "1.12.1.2"
platformdirs = "4.3.8"
poetry = "2.1.3"
poetry-core = "2.1.3"
propcache = "0.2.1"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyproject-hooks = "1.2.0"
python-dotenv = "1.0.1"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.13.0"
requests = "2.32.4"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
tomlkit = "0.13.3"
trove-classifiers = "2025.5.9.12"
typing-extensions = "4.12.2"
urllib3 = "2.5.0"
virtualenv = "20.31.2"
yarl = "1.18.3"
zstandard = "0.23.0"
ruff = "^0.12.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
pydantic-settings = "^2.10.1"
pytest-asyncio = "^1.0.0"


[tool.poetry.group.dev.dependencies]

[tool.mypy]
exclude='.venv'
python_version = "3.12"
ignore_missing_imports = true
no_warn_no_return = true
namespace_packages = true
show_error_codes = true
pretty = true

no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "migrations",
    "__pycache__",
    "_prometheus*",
    "env",
    ".env",
    "./env",
    "env/",
    ".env/",
    ".venv/",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "T20", "TCH", "INT", "PL", "FLY", "RUF", "ANN", "C90", "SIM101", "BLE001"
]
ignore = [
    "UP035",
    "PLR0913", "PLW2901", "PLW0603",
    "RUF001", "RUF002", "RUF003", "RUF012", "RUF010", "RUF015", "RUF005", "RUF009",
    "ANN401",
    "FLY002",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "E401"]
"tests/*" = ["S", "ANN", "PLR2004", "C901"]

[tool.ruff.format]
# не меняем кавычки, возможные варианты: "double" | "single" | "preserve"
quote-style = "preserve"

[tool.pytest.ini_options]
addopts = '-p no:warnings'
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integtest: marks integration tests",
    "unit",
    "slow: mark tests that may take considerable time"
]
env = [
    "USE_LOCAL_TEST_CONFIG = true",
]
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
